--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 <h1>Hello, World!</h1>
+<p>A value from a dictionary: {{ mydict['key'] }}.</p>
+<p>A value from a list: {{ mylist[3] }}.</p>
+<p>A value from a list, with a variable index: {{ mylist[myintvar] }}.</p>
+<p>A value from an object's method: {{ myobj.somemethod() }}.</p>
 </body>
 </html>
