--- a/templates/user.html
+++ b/templates/user.html
@@ -6,5 +6,34 @@
 </head>
 <body>
 <h1>Hello, {{ name|capitalize }}!</h1>
+{% if user %}
+    Hello, {{ user }}
+{% else %}
+    Hello, Stranger!
+{% endif %}
+
+<ul>
+    {% for comment in comments %}
+        <li>{{ comment }}</li>
+    {% endfor %}
+</ul>
+
+{% macro render_comment(comment) %}
+    <li>{{ comment }}</li>
+{% endmacro %}
+
+<ul>
+    {% for comment in comments %}
+        {{ render_comment(comment) }}
+    {% endfor %}
+</ul>
+
+{% import 'macros.html' as macros %}
+
+<ul>
+    {% for comment in comments %}
+        {{ macros.render_comment(comment) }}
+    {% endfor %}
+</ul>
 </body>
 </html>
