--- a/templates/user_bt.html
+++ b/templates/user_bt.html
@@ -28,3 +28,7 @@
         </div>
     </div>
 {% endblock %}
+{#{% block scripts %}#}
+{#{{ super() }}#}
+{#<script type="application/javascript" src="my-script.js"></script>#}
+{#{% endblock %}#}
