--- a/templates/500.html
+++ b/templates/500.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-<h1>Error 500!</h1>
-</body>
-</html>
+{#<!DOCTYPE html>#}
+{#<html>#}
+{#<head lang="en">#}
+{#    <meta charset="UTF-8">#}
+{#    <title></title>#}
+{#</head>#}
+{#<body>#}
+{#<h1>Error 500!</h1>#}
+{#</body>#}
+{#</html>#}
+
+{% extends "base.html" %}
+{% block title %}Flasky - Page Not Found{% endblock %}
+{% block page_content %}
+    <div class="page-header">
+        <h1>Internal Server Error</h1>
+    </div>
+{% endblock %}
